--- a/클린아키텍쳐/25장 계층과 경계.md
+++ b/클린아키텍쳐/25장 계층과 경계.md
@@ -1,199 +1,94 @@
+### 25장 계층과 경계
+
+-----
+
+<br>
+
+### 움퍼스 사냥 게임
+
+![img](https://blog.kakaocdn.net/dn/nvkTk/btqCckhpjwg/m2FsDDAKLNsQozNYXOzA41/img.png)그림 1. 아이디어로 개선된 다이어그램
+
+<br>
+
+
+
+![factory method pattern](https://songii00.github.io/assets/images/post/191110/(16).png)
+
+그림 2. 마이크로서비스 API 추가하기
+
+<br>
+
+### 코드
+
 ```kotlin
 /**============================*/
 interface PlayerManagement {
-    fun getLife(player: String): Int
-    fun getCost(event: String): Int
-    fun loseLife(player: String): Unit
-    fun isWinner(player: String): Boolean
+    //...
 }
 
 class PlayerManagementImpl(network: Network): PlayerManagement {
-    override fun getLife(player: String): Int {
-        TODO("Not yet implemented")
-    }
-
-    override fun getCost(event: String): Int {
-        TODO("Not yet implemented")
-    }
-
-    override fun loseLife(player: String) {
-        TODO("Not yet implemented")
-    }
-
-    override fun isWinner(player: String): Boolean {
-        TODO("Not yet implemented")
-    }
+    //...
 
 }
 
 class PlayerManagementProxy(network: Network): PlayerManagement {
-    override fun getLife(player: String): Int {
-        TODO("Not yet implemented")
-    }
-
-    override fun getCost(event: String): Int {
-        TODO("Not yet implemented")
-    }
-
-    override fun loseLife(player: String) {
-        TODO("Not yet implemented")
-    }
-
-    override fun isWinner(player: String): Boolean {
-        TODO("Not yet implemented")
-    }
-
+    //...
 }
 
 class MoveManagement(
     language: Language,
     dataStorage: DataStorage,
     network: Network): PlayerManagement {
-    override fun getLife(player: String): Int {
-        TODO("Not yet implemented")
-    }
-
-    override fun getCost(event: String): Int {
-        TODO("Not yet implemented")
-    }
-
-    override fun loseLife(player: String) {
-        TODO("Not yet implemented")
-    }
-
-    override fun isWinner(player: String): Boolean {
-        TODO("Not yet implemented")
-    }
-
+    //...
 }
 /**============================*/
 interface Language {
-    fun translate()
-    fun getText(): String
+    //...
 }
 
 class English(private val textDelivery: TextDelivery): Language {
-    override fun translate() {
-        textDelivery.setText("[English]${textDelivery.getText()}")
-    }
-    override fun getText(): String = textDelivery.getText()
+	//...
 }
 
 class Spanish(private val textDelivery: TextDelivery): Language {
-    override fun translate() {
-        textDelivery.setText("[Spanish]${textDelivery.getText()}")
-    }
-    override fun getText(): String = textDelivery.getText()
+    //...
 }
 /**============================*/
 interface TextDelivery {
-    fun setText(text: String)
-    fun getText(): String
+    //...
 }
 
 class SMS : TextDelivery {
-
-    private var text = ""
-
-    override fun setText(text: String) {
-        this.text = text
-    }
-
-    override fun getText(): String = "$text(from SMS)"
-
-
+	//...
 }
 
 class Console : TextDelivery {
-
-    private var text = ""
-
-    override fun setText(text: String) {
-        this.text = text
-    }
-
-    override fun getText(): String = "$text(from Console)"
-
-
+    //...
 }
 /**============================*/
 interface DataStorage {
-    fun add(value: String)
+    //...
 }
 
 class CloudData: DataStorage {
-
-    private val storage = HashSet<String>()
-
-    override fun add(value: String) {
-        storage.add(value)
-    }
-
+	//...
 }
 
 class FlashData: DataStorage {
-
-    private val storage = ArrayList<String>()
-
-    override fun add(value: String) {
-        storage.add(value)
-    }
-
+	//...
 }
 /**============================*/
 interface Network {
-
+	//...
 }
 
 class Wifi: Network {
+	//...
+}
 
+class Ethernet: Network {
+    //...
 }
 /**============================*/
-private lateinit var textDelivery: TextDelivery
-private lateinit var language: Language
-private lateinit var storage: DataStorage
-
-fun main() {
-    println("Welcome to Hunt the Wumpus!!")
-    print("SMS or Console:")
-    val delivery = readLine()
-    if(delivery == "SMS") {
-        textDelivery = SMS()
-        println("SMS를 선택했습니다")
-    } else {
-        textDelivery = Console()
-        println("Console을 선택했습니다")
-    }
-
-    print("English or Spanish:")
-    val lang = readLine()
-    if(lang == "English") {
-        language = English(textDelivery)
-        println("English를 선택했습니다")
-    } else {
-        language = Spanish(textDelivery)
-        println("Spanish를 선택했습니다")
-    }
-
-    print("Cloud or Flash:")
-    val stg = readLine()
-    if(stg == "Cloud") {
-        storage = CloudData()
-        println("CloudData를 선택했습니다")
-    } else {
-        storage = FlashData()
-        println("FlashData를 선택했습니다")
-    }
-    val network: Network = Wifi()
-    val management: PlayerManagement = MoveManagement(language, storage, network)
-
-    while(true) {
-        print("User input:")
-        val input = readLine()
-        if(input == "exit") break
-        
-        textDelivery.setText(input!!)
-        
-    }
-}
 ```
+
